// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/skeleton/demo/active.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-skeleton dcloud-skeleton-active"
  >
    <div
      class="dcloud-skeleton-content"
    >
      <h3
        class="dcloud-skeleton-title"
        style="width:38%"
      />
      <ul
        class="dcloud-skeleton-paragraph"
      >
        <li />
        <li />
        <li
          style="width:61%"
        />
      </ul>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/skeleton/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-skeleton"
  >
    <div
      class="dcloud-skeleton-content"
    >
      <h3
        class="dcloud-skeleton-title"
        style="width:38%"
      />
      <ul
        class="dcloud-skeleton-paragraph"
      >
        <li />
        <li />
        <li
          style="width:61%"
        />
      </ul>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/skeleton/demo/children.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="article"
  >
    <div>
      <h4>
        Ant Design, a design language
      </h4>
      <p>
        We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
      </p>
    </div>
    <button
      class="dcloud-btn"
      type="button"
    >
      <span>
        Show Skeleton
      </span>
    </button>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/skeleton/demo/complex.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-skeleton dcloud-skeleton-with-avatar"
  >
    <div
      class="dcloud-skeleton-header"
    >
      <span
        class="dcloud-skeleton-avatar dcloud-skeleton-avatar-lg dcloud-skeleton-avatar-circle"
      />
    </div>
    <div
      class="dcloud-skeleton-content"
    >
      <h3
        class="dcloud-skeleton-title"
        style="width:50%"
      />
      <ul
        class="dcloud-skeleton-paragraph"
      >
        <li />
        <li />
        <li />
        <li />
      </ul>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/skeleton/demo/element.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
  >
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <div
        class="dcloud-skeleton dcloud-skeleton-element"
      >
        <span
          class="dcloud-skeleton-button"
        />
      </div>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <div
        class="dcloud-skeleton dcloud-skeleton-element"
      >
        <span
          class="dcloud-skeleton-avatar dcloud-skeleton-avatar-circle"
        />
      </div>
    </div>
    <div
      class="dcloud-space-item"
    >
      <div
        class="dcloud-skeleton dcloud-skeleton-element"
      >
        <span
          class="dcloud-skeleton-input"
          style="width:200px"
        />
      </div>
    </div>
  </div>,
  "1": <br />,
  "2": <br />,
  "3": <div
    class="dcloud-skeleton dcloud-skeleton-element"
  >
    <span
      class="dcloud-skeleton-button"
    />
  </div>,
  "4": <br />,
  "5": <br />,
  "6": <div
    class="dcloud-skeleton dcloud-skeleton-element"
  >
    <div
      class="dcloud-skeleton-image"
    >
      <svg
        class="dcloud-skeleton-image-svg"
        viewBox="0 0 1098 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="dcloud-skeleton-image-path"
          d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
        />
      </svg>
    </div>
  </div>,
  "7": <div
    class="dcloud-divider dcloud-divider-horizontal"
    role="separator"
  />,
  "8": <form
    class="dcloud-form dcloud-form-inline"
    style="margin:16px 0"
  >
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label"
        >
          <label
            class=""
            title="Active"
          >
            Active
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <button
                aria-checked="false"
                class="dcloud-switch"
                role="switch"
                type="button"
              >
                <div
                  class="dcloud-switch-handle"
                />
                <span
                  class="dcloud-switch-inner"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label"
        >
          <label
            class=""
            title="Button Block"
          >
            Button Block
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <button
                aria-checked="false"
                class="dcloud-switch"
                role="switch"
                type="button"
              >
                <div
                  class="dcloud-switch-handle"
                />
                <span
                  class="dcloud-switch-inner"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label"
        >
          <label
            class=""
            title="Size"
          >
            Size
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-radio-group dcloud-radio-group-outline"
              >
                <label
                  class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
                >
                  <span
                    class="dcloud-radio-button dcloud-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="dcloud-radio-button-input"
                      type="radio"
                      value="default"
                    />
                    <span
                      class="dcloud-radio-button-inner"
                    />
                  </span>
                  <span>
                    Default
                  </span>
                </label>
                <label
                  class="dcloud-radio-button-wrapper"
                >
                  <span
                    class="dcloud-radio-button"
                  >
                    <input
                      class="dcloud-radio-button-input"
                      type="radio"
                      value="large"
                    />
                    <span
                      class="dcloud-radio-button-inner"
                    />
                  </span>
                  <span>
                    Large
                  </span>
                </label>
                <label
                  class="dcloud-radio-button-wrapper"
                >
                  <span
                    class="dcloud-radio-button"
                  >
                    <input
                      class="dcloud-radio-button-input"
                      type="radio"
                      value="small"
                    />
                    <span
                      class="dcloud-radio-button-inner"
                    />
                  </span>
                  <span>
                    Small
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label"
        >
          <label
            class=""
            title="Button Shape"
          >
            Button Shape
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-radio-group dcloud-radio-group-outline"
              >
                <label
                  class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
                >
                  <span
                    class="dcloud-radio-button dcloud-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="dcloud-radio-button-input"
                      type="radio"
                      value="default"
                    />
                    <span
                      class="dcloud-radio-button-inner"
                    />
                  </span>
                  <span>
                    Default
                  </span>
                </label>
                <label
                  class="dcloud-radio-button-wrapper"
                >
                  <span
                    class="dcloud-radio-button"
                  >
                    <input
                      class="dcloud-radio-button-input"
                      type="radio"
                      value="round"
                    />
                    <span
                      class="dcloud-radio-button-inner"
                    />
                  </span>
                  <span>
                    Round
                  </span>
                </label>
                <label
                  class="dcloud-radio-button-wrapper"
                >
                  <span
                    class="dcloud-radio-button"
                  >
                    <input
                      class="dcloud-radio-button-input"
                      type="radio"
                      value="circle"
                    />
                    <span
                      class="dcloud-radio-button-inner"
                    />
                  </span>
                  <span>
                    Circle
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label"
        >
          <label
            class=""
            title="Avatar Shape"
          >
            Avatar Shape
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-radio-group dcloud-radio-group-outline"
              >
                <label
                  class="dcloud-radio-button-wrapper"
                >
                  <span
                    class="dcloud-radio-button"
                  >
                    <input
                      class="dcloud-radio-button-input"
                      type="radio"
                      value="square"
                    />
                    <span
                      class="dcloud-radio-button-inner"
                    />
                  </span>
                  <span>
                    Square
                  </span>
                </label>
                <label
                  class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
                >
                  <span
                    class="dcloud-radio-button dcloud-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="dcloud-radio-button-input"
                      type="radio"
                      value="circle"
                    />
                    <span
                      class="dcloud-radio-button-inner"
                    />
                  </span>
                  <span>
                    Circle
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 9,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/skeleton/demo/list.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    aria-checked="false"
    class="dcloud-switch"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    />
  </button>,
  "1": <div
    class="dcloud-list dcloud-list-vertical dcloud-list-lg dcloud-list-split"
  >
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <ul
          class="dcloud-list-items"
        >
          <li
            class="dcloud-list-item dcloud-list-item-no-flex"
          >
            <div
              class="dcloud-skeleton dcloud-skeleton-with-avatar dcloud-skeleton-active"
            >
              <div
                class="dcloud-skeleton-header"
              >
                <span
                  class="dcloud-skeleton-avatar dcloud-skeleton-avatar-lg dcloud-skeleton-avatar-circle"
                />
              </div>
              <div
                class="dcloud-skeleton-content"
              >
                <h3
                  class="dcloud-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="dcloud-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
          <li
            class="dcloud-list-item dcloud-list-item-no-flex"
          >
            <div
              class="dcloud-skeleton dcloud-skeleton-with-avatar dcloud-skeleton-active"
            >
              <div
                class="dcloud-skeleton-header"
              >
                <span
                  class="dcloud-skeleton-avatar dcloud-skeleton-avatar-lg dcloud-skeleton-avatar-circle"
                />
              </div>
              <div
                class="dcloud-skeleton-content"
              >
                <h3
                  class="dcloud-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="dcloud-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
          <li
            class="dcloud-list-item dcloud-list-item-no-flex"
          >
            <div
              class="dcloud-skeleton dcloud-skeleton-with-avatar dcloud-skeleton-active"
            >
              <div
                class="dcloud-skeleton-header"
              >
                <span
                  class="dcloud-skeleton-avatar dcloud-skeleton-avatar-lg dcloud-skeleton-avatar-circle"
                />
              </div>
              <div
                class="dcloud-skeleton-content"
              >
                <h3
                  class="dcloud-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="dcloud-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
